--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "README.md"
     ],
     "scripts": {
-        "format": "npx prettier . --write",
+        "format": "npx prettier src --write",
         "start": "node ."
     },
     "dependencies": {
