--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "NouRax",
     "description": "A simple discord music bot built with aoi.js and lavalink ✨",
+    "version": "1.5.0",
     "main": "src/index.js",
     "license": "ISC",
     "files": [
