fix lyrics command

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
         "aoi.js": "^6.9.0",
         "aoijs.lavalink": "^4.0.0",
         "aoijs.mysql": "^4.0.0",
+        "cheerio": "^1.0.0",
         "discord-hybrid-sharding": "^2.2.3",
         "dotenv": "^16.4.7",
-        "genius-lyrics": "^4.4.7",
+        "encoding": "^0.1.13",
+        "node-fetch": "^2.6.1",
         "topgg.utils": "^5.0.0"
     },
     "devDependencies": {
